k8s/app2/app2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app2
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: app2
